--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
     "@astrojs/react": "^4.4.2",
+    "@astrojs/vercel": "^9.0.4",
     "@fontsource/noto-serif-sc": "^5.2.8",
     "@tailwindcss/vite": "^4.1.18",
     "@types/js-yaml": "^4.0.9",
